--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ h1 {
 
 .prep-time {
     background-color: var(--rose-50);
-    padding: 24px;
-    border-radius: 12px;
+    padding: 24px 24px 12px;
+    padding-bottom: 16px;
 }
 
 .prep-time>h2 {
@@ -106,6 +106,11 @@ h1 {
     padding-left: 24px;
     padding-right: 16px
 }
+
+.prep-time-ul>li {
+padding-bottom: 8px;
+}
+
 
 h2 {
     padding-top: 32px;
