--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h1 {
 }
 
 .prep-time-ul>li {
-padding-bottom: 8px;
+    padding-bottom: 8px;
 }
 
 
@@ -170,7 +170,7 @@ th,
 td {
     border: none;
     /* Remove all borders by default */
-    padding: 8px;
+    padding-bottom: 8px;
     /* Optional, for spacing */
 }
 
@@ -231,6 +231,12 @@ footer {
     .nutrition-para {
         padding-bottom: 24px;
     }
+
+    th,
+    td {
+        padding-bottom: 12px;
+    }
+
 }
 
 
@@ -254,5 +260,10 @@ footer {
 
     .nutrition-para {
         padding-bottom: 24px;
+    }
+
+    th,
+    td {
+        padding-bottom: 12px;
     }
 }
