--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 1px);
 }
 
 main {
